--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,5 @@ jobs:
       run: |
         python -m flake8
         cd infra_project/
+        python manage.py runserver
         python manage.py test
